ui: fix horizontal scroll on onboarding

--- a/apps/web/src/app/nouveautes/NouveautesLayout.module.css
+++ b/apps/web/src/app/nouveautes/NouveautesLayout.module.css
@@ -1,6 +1,6 @@
 .container {
     min-height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
     display: flex;
     position: relative;
 
