--- a/apps/web/src/app/nouveautes/TwoPartOnboardingLayout.module.css
+++ b/apps/web/src/app/nouveautes/TwoPartOnboardingLayout.module.css
@@ -38,7 +38,7 @@
 
 .illustrationContainer {
     flex: 1 0 50%;
-    overflow: show;
+    overflow: visible;
 }
 
 .illustration {
